[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
ratatui = "0.30.0"
tui-big-text = "0.8.4"
ratatui-textarea = "0.8.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
clap = { version = "4.6.1", features = ["derive"] }
cli-table = "0.5.0"
textwrap = "0.16"
